bugfix in work calculation
robotmovingcompany: it looks like robot energy is only used up when the robot is pushing to the left.
robotmovingcompany: additional points (up to 100) for having battery left over
robotmovingcompany: add detection of game over and new game
robotmovingcompany: automatically go to next object when you score or lose the object (instead of hitting "next object" button)
# 1.03.13 (31267) May 3, 2009
Make "custom crate" text label match font for other labels.
Layout fixes for object selection panel.
fixed: Original forces checkbox should update when sim is paused.
robot energy refills after each object
for game tab, set applied force to zero on slider mouse release
# 1.03.12 (31256) May 3, 2009
5/3/09 Performance fixes for the game tab
# 1.03.11 (31234) May 1, 2009
5/1/09 minor fixes
# 1.03.10 (31217) May 1, 2009
5/1/09 bugfixes for rotation
# 1.03.09 (31213) May 1, 2009
5/1/09 Improvements for game model and coordinate frames 
# 1.03.08 (31211) May 1, 2009
5/1/09 Improvements for game model and coordinate frames
# 1.03.07 (31209) May 1, 2009
5/1/09 improvements for rotatable components and added energy model for game mode
# 1.03.06 (31153) Apr 29, 2009
4/29/09 Improvements for game mode.
# 1.03.05 (31088) Apr 28, 2009
4/28/09 Improvements to main and game modules
# 1.03.04 (31085) Apr 28, 2009
4/28/09 Improvements for main and game module
# 1.03.03 (30988) Apr 27, 2009
4/27/09 Deploy game module.
# 1.03.02 (30914) Apr 25, 2009
4/25/09 Many new features and bugfixes.
# 1.03.01 (30822) Apr 23, 2009
4/23/09 Improvements for FBD and Coordinate Frames
# 1.03.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
# 1.02.06 (30208) Apr 1, 2009
4/1/09 Deploy test version
# 1.02.05 (29902) Mar 25, 2009
3/25/09 Initial version of scala ramp
# 1.02.04 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.02.03 (29335) Mar 9, 2009
# 1.02.02 (28823) Feb 19, 2009