@@ -5,6 +5,7 @@ robotmovingcompany: it looks like robot energy is only used up when the robot is
 robotmovingcompany: additional points (up to 100) for having battery left over
 robotmovingcompany: add detection of game over and new game
 robotmovingcompany: automatically go to next object when you score or lose the object (instead of hitting "next object" button)
+robotmovingcompany: moving the applied force slider starts the game
 # 1.03.13 (31267) May 3, 2009
 Make "custom crate" text label match font for other labels.
 Layout fixes for object selection panel.
